[tool.poetry]
name = "core"
version = "1.0.22"
description = "Common Operations for Robust Engineering"
authors = [
      "François Steinmetz",
      "Joackim Orcière",
      "Nathan Capon",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

exclude = [
    "__pycache__",
    "*__pycache__*",
]

[tool.poetry.dependencies]
python = "^3.10"
xarray = "*"
numpy = "*"
dask = "*"
pandas = "*"
click = "*"
toml = "*"
tqdm = "*" # tqdm itself doesn't have any dependencies
python-dotenv = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
