[project]
name = "core"
version = "1.0.28"
description = "Common Operations for Robust Engineering"
authors = [
    {name = "François Steinmetz", email = "fs@hygeos.com"},
    {name = "Joackim Orcière", email = "joackim.orciere@hygeos.com"},
    {name = "Nathan Capon", email = "nathan.capon@hygeos.com"}
]
dependencies = ["tqdm", "xarray", "dask", "scipy", "h5netcdf>=1.6.1,<2"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]
tests = "pytest tests"

[tool.pixi.dependencies]
pytest = "*"
pytest-html = "*"
pytest-xdist = "*"
tqdm = "*"
xarray = "*"
dask = "*"
scipy = "*"
pooch = "*"
h5netcdf = "*"
