[project]
name = "core"
version = "1.1.0"
description = "Common Operations for Robust Engineering"
authors = [
    {name = "François Steinmetz", email = "fs@hygeos.com"},
    {name = "Joackim Orcière", email = "joackim.orciere@hygeos.com"},
    {name = "Nathan Capon", email = "nathan.capon@hygeos.com"}
]
dependencies = ["tqdm", "xarray", "dask", "scipy", "h5netcdf", "python-dotenv", "toml", "lxml", "ipywidgets"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.environments]
default = { features = ["hyp", "sys"], solve-group = "default" }

[tool.pixi.tasks]
tests = "pytest tests"
build_docs = "sphinx-build -b html docs/source docs/build"

[tool.pixi.pypi-dependencies]
# core = { path = ".", editable = true }

[tool.pixi.dependencies]
pytest = "*"
pytest-html = "*"
pytest-xdist = "*"
tqdm = "*"
xarray = "*"
dask = "*"
scipy = "*"
pooch = "*"
h5netcdf = "*"
python-dotenv = "*"
toml = "*"
matplotlib-base = "*"
lxml = "*"
sphinx = "*"
ipykernel = "*"
ipywidgets = "*"

[tool.pixi.feature.hyp.dependencies]
[tool.pixi.feature.sys.dependencies]
sphinx_rtd_theme = "*"
